example/lib/src/generated/errors/errors_localization_tr.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Turkish (`tr`).
class ErrorsLocalizationTr extends ErrorsLocalization {
  ErrorsLocalizationTr([String locale = 'tr']) : super(locale);

  @override
  String get error => 'Bir hata oluştu';

  @override
  String get unexpectedError => 'Beklenmedik bir hata oluştu';

  @override
  String get bugReportSentText => 'Hata raporu başarıyla gönderildi.';
}
